src/middleware/snapshots/toker__middleware__quota__tests__default_style.snap
---
source: src/middleware/quota.rs
expression: first
---
> [!CAUTION]
> Stopped by [toker](https://github.com/passcod/toker): the 5-hour quota is spent until 08:00. This session's context is 9,872,344 tokens.
> Reply with the release marker to continue on overage until then.
