src/middleware/snapshots/toker__middleware__quota__tests__plain_reset_unknown.snap
---
source: src/middleware/quota.rs
expression: "Blocking::notice(Meter::FiveHour, None, None, &tz, NoticeStyle::Plain)"
---
[Stopped by [toker](https://github.com/passcod/toker): the 5-hour quota is spent, and its reset time is unknown.
Reply with the release marker to continue on overage until then.]
