src/middleware/snapshots/toker__middleware__quota__tests__style_toker.snap
---
source: src/middleware/quota.rs
expression: toker
---
> [!TOKER]
> Stopped by [toker](https://github.com/passcod/toker): the 5-hour quota is spent until 08:00.
> Reply with the release marker to continue on overage until then.
