src/middleware/snapshots/toker__middleware__quota__tests__the_json_turn_is_byte_pinned.snap
---
source: src/middleware/quota.rs
expression: "std::str::from_utf8(&bytes).expect(\"utf-8\")"
---
{"id":"msg_toker_blocked","type":"message","role":"assistant","model":"claude-sonnet-5","content":[{"type":"text","text":"[Stopped: quota is spent.]"}],"stop_reason":"end_turn","stop_sequence":null,"usage":{"input_tokens":0,"output_tokens":0,"cache_read_input_tokens":0,"cache_creation_input_tokens":0}}
